Fix overflow scroll not applying to html preview

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -5326,6 +5326,10 @@ pre {
 
 /* Event preview HTML elements */
 
+.modal-preview-overflow {
+  overflow-y: scroll;
+}
+
 .modal-body-preview {
   padding: 10px;
 }
